--- a/Tabs/SelectedComputerTab.xaml
+++ b/Tabs/SelectedComputerTab.xaml
@@ -10,6 +10,7 @@
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal" Height="130" VerticalAlignment="Top" Margin="20 20 20 0">
+
                 <Grid>
                     <Grid Height="85" Width="245" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFECECEC" Margin="10 0">
                         <Grid.Effect>
@@ -23,7 +24,7 @@
                         </StackPanel>
 
                     </Grid>
-                    <Grid Width="105" Height="105" Background="#FF9BCB52" Margin="10 0 0 20" HorizontalAlignment="Left">
+                    <Grid Width="105" Height="105" Background="#FF9BCB52" HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="Gpu" Foreground="White" Width="75" Height="75" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
                 </Grid>
@@ -41,7 +42,7 @@
                         </StackPanel>
 
                     </Grid>
-                    <Grid Width="105" Height="105" Background="#FF9BCB52" Margin="10 0 0 20" HorizontalAlignment="Left">
+                    <Grid Width="105" Height="105" Background="#FF9BCB52"  HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="Brain" Foreground="White" Width="75" Height="75" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
                 </Grid>
@@ -59,7 +60,7 @@
                         </StackPanel>
 
                     </Grid>
-                    <Grid Width="105" Height="105" Background="#FF9BCB52" Margin="10 0 0 20" HorizontalAlignment="Left">
+                    <Grid Width="105" Height="105" Background="#FF9BCB52" HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="Memory" Foreground="White" Width="75" Height="75" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
                 </Grid>
@@ -77,7 +78,7 @@
                         </StackPanel>
 
                     </Grid>
-                    <Grid Width="105" Height="105" Background="#FF9BCB52" Margin="10 0 0 20" HorizontalAlignment="Left">
+                    <Grid Width="105" Height="105" Background="#FF9BCB52" HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="PassportElectronic" Foreground="White" Width="75" Height="75" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
                     </Grid>
